frontend/src/components/styles.css
:root {
  --primary: #eeeeee;
  --primary_light: #ffffff;
  --primary_dark: #bcbcbc;

  --secondary: #bbdefb;
  --secondary_light: #eeffff;
  --secondary_dark: #8aacc8;
}

html {
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
  color: inherit;
}

.Container {
  display: flex;
  flex-direction: column;
}

.header-content {
  align-items: flex-end;
  background-image: url("./assets/racecar.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  min-height: 80vh;
  justify-content: flex-end;
  width: 100vw;
}

.weightBias-calculation {
  display: flex;
  flex-direction: column;
  gap: 32px;
  
}

.Tune {
  height: 80vh;
  padding: 0;
  margin: 0;
}

.Tune h1 {
  font-size: 42px;
  text-align: center;
}

#Sliders {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-width: none;
}

#Sliders h2 {
  display: flex;
  justify-content: center;
  gap: 16px;
}

#bias-slider {
  display: flex;
  flex-direction: column;
  text-align: center;
}

#springRateOutput {
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 32px;
}

#down {
  margin-top: 100%;
  padding-bottom: 25%;
}

#headerButton,
#appBar {
  background-color: darkcyan;
}

#sliderColor {
  color: darkcyan;
}

#weight-slider,
#bias-slider {
  max-width: 60rem;
  min-width: 15rem;
}

